# auto-research

./: .gitignore  README.md  cookies-comprehensive-guide.md
.github/workflows/: update-readme.yml
claude-code-research/: README.md  _summary.md  docs.md  dynamic_agent.py  notes.md  parallel_subagents.py  requirements.txt  test_dynamic_agent.py
comparison-of-object-detection-models/: .gitignore  README.md  TESTING.md  _summary.md  compare_models.py  detect_images.py  notes.md  requirements.txt
comparison-of-object-detection-models/src/: __init__.py  benchmark.py  detect.py  model_loader.py  rf100_evaluator.py  visualize.py
comparison-of-object-detection-models/tests/: test_benchmark.py  test_detect.py  test_model_loader.py
exploring-cookies/: _summary.md  index.html  package-lock.json  package.json
exploring-cookies/src/: App.css  App.jsx  App.test.jsx
fine-tune-rf-detr-using-sam3/: README.md  notes.md  requirements.txt
fine-tune-rf-detr-using-sam3/src/: __init__.py  cli.py  detector.py  finetune.py  sam3_integration.py
fine-tune-rf-detr-using-sam3/tests/: __init__.py  test_cli.py  test_detector.py  test_finetune.py  test_sam3_integration.py
langgraph-aws-mcp/: .gitignore  README.md  _summary.md  example.py  notes.md  pyproject.toml  run_tests.sh
langgraph-aws-mcp/src/aws_troubleshooter/: __init__.py  agent.py  cli.py  mcp_client.py
langgraph-aws-mcp/tests/: __init__.py  conftest.py  test_agent_e2e.py  test_cloudwatch_integration.py  test_dynamodb_integration.py  test_ecs_integration.py  test_mcp_client.py
(+22 files in other folders)
