[project]
name = "aws-troubleshooter"
version = "0.1.0"
description = "LangGraph agent for AWS application troubleshooting using MCP servers"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "mcp>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
]

[project.scripts]
aws-troubleshoot = "aws_troubleshooter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src/aws_troubleshooter"]
